--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-GetOldTweets3==0.0.11
+# GetOldTweets3==0.0.11
 jupyter
 pandas
 sklearn
@@ -8,3 +8,4 @@ stop-words
 requests
 matplotlib
 ipython
+git+https://github.com/JustAnotherArchivist/snscrape.git
